Bug 1273612 - Do not enter dormant when MediaDecoder is not paused r=jwwang